--- a/index.html
+++ b/index.html
@@ -3,242 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>boot.IA - Inteligência Artificial para Seu Negócio</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            background: linear-gradient(135deg, #0f172a 0%, #1e3a8a 50%, #0f172a 100%);
-            min-height: 100vh;
-            padding: 3rem 1rem;
-        }
-
-        .container {
-            max-width: 900px;
-            margin: 0 auto;
-        }
-
-        .header {
-            text-align: center;
-            margin-bottom: 3rem;
-        }
-
-        .header h1 {
-            font-size: 3.5rem;
-            color: white;
-            margin-bottom: 1rem;
-            font-weight: 700;
-        }
-
-        .header .brand-ia {
-            color: #60a5fa;
-        }
-
-        .header .subtitle {
-            font-size: 1.25rem;
-            color: #d1d5db;
-            margin-bottom: 0.5rem;
-        }
-
-        .header .description {
-            color: #9ca3af;
-            font-size: 1rem;
-        }
-
-        .card {
-            background: white;
-            border-radius: 1.5rem;
-            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
-            padding: 3rem;
-            margin-bottom: 2rem;
-        }
-
-        .form-group {
-            margin-bottom: 1.5rem;
-        }
-
-        .form-row {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 1.5rem;
-            margin-bottom: 1.5rem;
-        }
-
-        label {
-            display: block;
-            font-weight: 600;
-            color: #374151;
-            margin-bottom: 0.5rem;
-            font-size: 0.875rem;
-        }
-
-        .input-wrapper {
-            position: relative;
-        }
-
-        .input-icon {
-            position: absolute;
-            left: 0.75rem;
-            top: 50%;
-            transform: translateY(-50%);
-            color: #9ca3af;
-            width: 1.25rem;
-            height: 1.25rem;
-        }
-
-        input[type="text"],
-        input[type="email"],
-        input[type="tel"],
-        textarea {
-            width: 100%;
-            padding: 0.75rem 1rem 0.75rem 2.75rem;
-            border: 2px solid #d1d5db;
-            border-radius: 0.5rem;
-            font-size: 1rem;
-            transition: all 0.2s;
-            font-family: inherit;
-        }
-
-        textarea {
-            padding: 0.75rem 1rem;
-            resize: none;
-            min-height: 120px;
-        }
-
-        input:focus,
-        textarea:focus {
-            outline: none;
-            border-color: #3b82f6;
-            box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
-        }
-
-        input.error,
-        textarea.error {
-            border-color: #ef4444;
-        }
-
-        .error-message {
-            color: #ef4444;
-            font-size: 0.875rem;
-            margin-top: 0.25rem;
-            display: none;
-        }
-
-        .error-message.show {
-            display: block;
-        }
-
-        .submit-btn {
-            width: 100%;
-            background: linear-gradient(to right, #2563eb, #1d4ed8);
-            color: white;
-            font-weight: 600;
-            padding: 1rem 1.5rem;
-            border: none;
-            border-radius: 0.5rem;
-            font-size: 1rem;
-            cursor: pointer;
-            transition: all 0.2s;
-            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.2);
-        }
-
-        .submit-btn:hover {
-            background: linear-gradient(to right, #1d4ed8, #1e40af);
-            transform: translateY(-2px);
-            box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.3);
-        }
-
-        .submit-btn:active {
-            transform: translateY(0);
-        }
-
-        .footer-info {
-            margin-top: 2rem;
-            padding-top: 1.5rem;
-            border-top: 1px solid #e5e7eb;
-            text-align: center;
-        }
-
-        .footer-info p {
-            color: #6b7280;
-            font-size: 0.875rem;
-        }
-
-        .bottom-info {
-            text-align: center;
-            color: #9ca3af;
-            font-size: 0.875rem;
-            margin-top: 2rem;
-        }
-
-        .success-screen {
-            display: none;
-            text-align: center;
-            max-width: 500px;
-            margin: 0 auto;
-        }
-
-        .success-screen.show {
-            display: block;
-        }
-
-        .success-icon {
-            width: 5rem;
-            height: 5rem;
-            background: #dcfce7;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin: 0 auto 1.5rem;
-        }
-
-        .success-icon svg {
-            width: 3rem;
-            height: 3rem;
-            color: #16a34a;
-        }
-
-        .success-screen h2 {
-            font-size: 2rem;
-            color: #111827;
-            margin-bottom: 1rem;
-        }
-
-        .success-screen p {
-            color: #6b7280;
-            font-size: 1.125rem;
-            line-height: 1.6;
-        }
-
-        @media (max-width: 768px) {
-            .header h1 {
-                font-size: 2.5rem;
-            }
-
-            .form-row {
-                grid-template-columns: 1fr;
-            }
-
-            .card {
-                padding: 2rem 1.5rem;
-            }
-
-            body {
-                padding: 2rem 1rem;
-            }
-        }
-    </style>
+    <title>Vertex.IA - Inteligência Artificial para Seu Negócio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>boot<span class="brand-ia">.IA</span></h1>
+            <img src="Midias/vertex.png" alt="vertex" class="logo">
+            <h1>Vertex<span class="brand-ia">.IA</span></h1>
             <p class="subtitle">Inteligência Artificial para Impulsionar Seu Negócio</p>
             <p class="description">Preencha o formulário e descubra como podemos ajudar sua empresa</p>
         </div>
@@ -336,13 +108,20 @@
                 </svg>
             </div>
             <h2>Recebido com Sucesso!</h2>
-            <p>Obrigado pelo seu interesse. Nossa equipe entrará em contato em breve para discutir como a boot.IA pode transformar seu negócio.</p>
+            <p>Obrigado pelo seu interesse. Nossa equipe entrará em contato em breve para discutir como a Vertex.IA pode transformar seu negócio.</p>
         </div>
 
         <div class="bottom-info">
-            <p>© 2024 boot.IA - Transformando negócios através da Inteligência Artificial</p>
+            <p>© 2025 vertex.IA - Transformando negócios através da Inteligência Artificial</p>
         </div>
     </div>
+
+    
+         <a href="https://wa.me/5519981773970" target="_blank" class="whatsapp-float pulse">
+        <svg class="whatsapp-icon" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
+        </svg>
+    </a>
 
     <script>
         // Formatação de moeda
